--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Juan Manuel González Developer Portfolio" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <meta property="og:site_name" content="Js Developer Portfolio" />
+    <meta property="og:title" content="Juan González Portfolio" />
+    <meta property="og:image" content="/preview.png" />
+    <meta property="og:url" content="https://juangonzalez-devportfolio.netlify.app/" />
+    <meta property="og:type" content="portfolio" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>Juan González Portfolio</title>
   </head>
   <body>
