--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     <title>Juan González Portfolio</title>
   </head>
   <body>
+    <form name="contact-form" netlify netlify-honeypot="bot-field" action="/" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message" ></textarea>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
