--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta property="og:site_name" content="Js Developer Portfolio" />
     <meta property="og:title" content="Juan González Portfolio" />
     <meta property="og:image" content="/preview.png" />
-    <meta property="og:url" content="https://juangonzalez-devportfolio.netlify.app/" />
+    <meta property="og:url" content="https://juangonzalez.netlify.app/" />
     <meta property="og:type" content="portfolio" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
